--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <span class="text-[9px] font-black uppercase tracking-[0.4em] opacity-60">Verified Results 2026</span>
         </div>
         <h1 class="text-huge mb-8 reveal">
-            <span class="opacity-20">ENGINEERING</span> <br/>
+            <span class="opacity-20">ESTABLISHING</span> <br/>
             <span class="gradient-text">VISUAL GROWTH.</span>
         </h1>
         <p class="max-w-2xl mx-auto text-lg md:text-2xl font-light opacity-50 mb-12 reveal">
@@ -229,6 +229,57 @@
                 </div>
                 <div class="mt-8 text-[8px] sm:text-[10px] font-bold opacity-30 leading-relaxed">
                     *Data derived from official Meta Business Suite exports of the 2024-2025 performance period.
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Performance Data -->
+      <!-- Methodology / Expertise -->
+    <section id="expertise" class="py-24 sm:py-40">
+        <div class="max-w-[1600px] mx-auto px-4">
+            <div class="text-center mb-16 sm:mb-32 reveal">
+                <h2 class="text-4xl sm:text-6xl md:text-8xl font-black tracking-tighter mb-4 sm:mb-8">Expertise <br/> <span class="opacity-20">Pillars.</span></h2>
+                <p class="max-w-2xl mx-auto opacity-50 text-sm sm:text-xl leading-relaxed">Providing a specialized suite of services for brands that demand a premium market position.</p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 sm:gap-10">
+                <div class="apple-glass p-8 sm:p-12 reveal hover:bg-[#153129] hover:text-white group">
+                    <div class="w-12 h-12 sm:w-16 sm:h-16 bg-black text-white rounded-xl sm:rounded-2xl flex items-center justify-center mb-8 group-hover:bg-[#FF6B00] transition-colors">
+                        <svg class="w-6 h-6 sm:w-8 sm:h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                    </div>
+                    <h4 class="text-xl sm:text-2xl font-black mb-4 sm:mb-6">Paid Media Architecture</h4>
+                    <p class="opacity-60 text-xs sm:text-sm leading-relaxed mb-6 sm:mb-8">Advanced Meta Ads (FB/IG) management focusing on conversion funnels, pixel tracking, and lookalike scaling.</p>
+                    <ul class="text-[8px] sm:text-[10px] font-black uppercase tracking-widest space-y-2 sm:space-y-3 opacity-40">
+                        <li>• Custom Audience Logic</li>
+                        <li>• Retargeting Sprints</li>
+                        <li>• ROAS Optimization</li>
+                    </ul>
+                </div>
+
+                <div class="apple-glass p-8 sm:p-12 reveal hover:bg-[#153129] hover:text-white group" style="transition-delay: 0.1s;">
+                    <div class="w-12 h-12 sm:w-16 sm:h-16 bg-black text-white rounded-xl sm:rounded-2xl flex items-center justify-center mb-8 group-hover:bg-[#FF6B00] transition-colors">
+                        <svg class="w-6 h-6 sm:w-8 sm:h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path></svg>
+                    </div>
+                    <h4 class="text-xl sm:text-2xl font-black mb-4 sm:mb-6">Visual Production</h4>
+                    <p class="opacity-60 text-xs sm:text-sm leading-relaxed mb-6 sm:mb-8">Cinematic short-form video editing and strategic graphics designed for 1.5-second retention hooks.</p>
+                    <ul class="text-[8px] sm:text-[10px] font-black uppercase tracking-widest space-y-2 sm:space-y-3 opacity-40">
+                        <li>• Adobe Creative Suite</li>
+                        <li>• Viral Hooks Engineering</li>
+                        <li>• Brand Aesthetic Sync</li>
+                    </ul>
+                </div>
+
+                <div class="apple-glass p-8 sm:p-12 reveal hover:bg-[#153129] hover:text-white group" style="transition-delay: 0.2s;">
+                    <div class="w-12 h-12 sm:w-16 sm:h-16 bg-black text-white rounded-xl sm:rounded-2xl flex items-center justify-center mb-8 group-hover:bg-[#FF6B00] transition-colors">
+                        <svg class="w-6 h-6 sm:w-8 sm:h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                    </div>
+                    <h4 class="text-xl sm:text-2xl font-black mb-4 sm:mb-6">B2B Authority Sprints</h4>
+                    <p class="opacity-60 text-xs sm:text-sm leading-relaxed mb-6 sm:mb-8">LinkedIn profile engineering for SaaS founders and consultants to drive high-intent inquiries.</p>
+                    <ul class="text-[8px] sm:text-[10px] font-black uppercase tracking-widest space-y-2 sm:space-y-3 opacity-40">
+                        <li>• Executive Branding</li>
+                        <li>• Narrative Frameworks</li>
+                        <li>• Inbound Lead Engine</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -368,3 +419,4 @@
     </script>
 </body>
 </html>
+
